[package]
name = "pfnatd"
version = "0.1.0"
authors = ["Maxim Khitrov <max@mxcrypt.com>"]
edition = "2024"
description = "Easy NAT mode for OpenBSD packet filter"
repository = "https://github.com/mxk/pfnatd"
license = "MPL-2.0"
keywords = ["openbsd", "pf", "nat", "firewall", "stun"]
categories = ["command-line-utilities", "network-programming", "os", "security"]

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
libc = { version = "0.2.177", features = ["extra_traits"] }
log = "0.4.28"
signal-hook = "0.3.18"

[lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
let-underscore = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
wildcard_imports = "allow"
restriction = { level = "allow", priority = -1 }
alloc_instead_of_core = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
exit = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
missing_assert_message = "warn"
missing_enforced_import_renames = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
mutex_atomic = "warn"
pattern_type_mismatch = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_add = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
